--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">News</a>
+                <a
+                  class="nav-link text-dark"
+                  href="#"
+                  id="changeBackgroundButton"
+                >
+                  Background
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Abouts</a>
+                <a class="nav-link text-dark" href="/chat">Chat</a>
               </li>
             </ul>
           </div>
@@ -87,7 +93,6 @@
         <input type="text" id="search-input" placeholder="Search" />
         <button type="button" id="search-button">Search</button>
       </form>
-
       <div class="todos">
         <ul id="content" class="todo-list"></ul>
       </div>
@@ -150,6 +155,79 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="notificationModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <!-- Thay đổi modal-lg thành modal-sm nếu bạn muốn modal nhỏ hơn -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Thông báo đã đến hạn
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body" id="notificationContent">
+            <!-- Nội dung thông báo sẽ được cập nhật ở đây -->
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Đóng
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="notificationModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body" id="notificationContent">
+            <!-- Nội dung thông báo sẽ được cập nhật ở đây -->
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Đóng
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
