--- a/login.html
+++ b/login.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="./public/css/login.css" />
+  </head>
+  <body>
+    <div class="login">
+      <div class="login__container">
+        <h1>Đăng Nhập</h1>
+        <form id="loginForm">
+          <h5 for="username">Tên đăng nhập</h5>
+          <input
+            type="text"
+            class="input-login-username"
+            id="username"
+            name="username"
+            required
+          />
+          <h5 for="password">Mật khẩu</h5>
+          <input
+            type="password"
+            class="input-login-password"
+            id="password"
+            name="password"
+            required
+          />
+          <br />
+          <button type="submit" class="login__signInButton">Đăng Nhập</button>
+        </form>
+      </div>
+    </div>
 
+    <script>
+      const users = [
+        { username: "admin", password: "admin" },
+        { username: "user", password: "user" },
+      ];
+
+      const loginForm = document.getElementById("loginForm");
+
+      loginForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+
+        // Kiểm tra và xử lý đăng nhập ở đây
+        const user = users.find(
+          (u) => u.username === username && u.password === password
+        );
+
+        if (user) {
+          localStorage.setItem("loggedInUser", JSON.stringify(user));
+          window.location.href = "index.html"; // Chuyển hướng sau khi đăng nhập thành công
+        } else {
+          alert("Tên đăng nhập hoặc mật khẩu không đúng!");
+        }
+      });
+    </script>
+  </body>
+</html>
