--- a/Chat.html
+++ b/Chat.html
@@ -1,4 +1,3 @@
-<!-- Chat.html -->
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8" />
@@ -17,7 +16,7 @@
       <div id="chat">
         <div id="chat-header">
           <!-- Hiển thị tên của bạn đang trò chuyện -->
-          <span>You are chatting with: Friend 1</span>
+          <span>Chatting :</span>
         </div>
         <ul id="messages">
           <!-- Hiển thị tin nhắn trong cuộc trò chuyện -->
