--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
               <li class="nav-item">
                 <a class="nav-link text-dark" href="/chat">Chat</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="#" id="startAudioButton">
+                  Play
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -165,7 +170,6 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-lg">
-        <!-- Thay đổi modal-lg thành modal-sm nếu bạn muốn modal nhỏ hơn -->
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">
@@ -179,7 +183,7 @@
             ></button>
           </div>
           <div class="modal-body" id="notificationContent">
-            <!-- Nội dung thông báo sẽ được cập nhật ở đây -->
+            <!-- noi dung thong bao se cap nhap o day -->
           </div>
           <div class="modal-footer">
             <button
@@ -213,7 +217,7 @@
             ></button>
           </div>
           <div class="modal-body" id="notificationContent">
-            <!-- Nội dung thông báo sẽ được cập nhật ở đây -->
+            <!-- noi dung thong bao se cap nhap o day -->
           </div>
           <div class="modal-footer">
             <button
@@ -227,7 +231,6 @@
         </div>
       </div>
     </div>
-    <!--  -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -248,9 +251,26 @@
     <script>
       const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
       if (!loggedInUser) {
-        // Nếu không có thông tin đăng nhập, chuyển hướng đến trang login.html
+        // neu ko co thong tin login se chuyen den trang login.html
         window.location.href = "login.html";
       }
+      // ham nghe nhac
+      const audio = new Audio("public/Music/musix-chill.mp3");
+      let isPlaying = false;
+
+      document
+        .getElementById("startAudioButton")
+        .addEventListener("click", function () {
+          if (isPlaying) {
+            // neu nhac dang play thi pause nó
+            audio.pause();
+            isPlaying = false;
+          } else {
+            // neu nhac chua play thi play no
+            audio.play();
+            isPlaying = true;
+          }
+        });
     </script>
   </body>
 </html>
