--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         >
           Update
         </button>
-        <input type="text" id="search-input" placeholder="Search" />
-        <button type="button" id="search-button">Search</button>
+        <!-- <input type="text" id="search-input" placeholder="Search" /> -->
+        <!-- <button type="button" id="search-button">Search</button> -->
       </form>
       <div class="todos">
         <ul id="content" class="todo-list"></ul>
