--- a/Chat.html
+++ b/Chat.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AppDoing</title>
   </head>
+   <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   <link rel="stylesheet" href="./public/css/chat.css" />
   <body>
-     <div id="messenger-container">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">TODOLIST APP</a>
+      </div>
+    </nav>
+     <div id="messenger-container" style="margin-top: 60px;">
       <div id="chat-sidebar">
         <div class="friend"></div>
       </div>
