--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AppDoing</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TODOLIST APP</a>
+        <a class="navbar-brand" href="index.html">TODOLIST APP</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,7 +51,10 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link text-dark" aria-current="page" href="#"
+                <a
+                  class="nav-link text-dark"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -68,9 +71,10 @@
                 <a class="nav-link text-dark" href="/chat">Chat</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#" id="startAudioButton">
-                  Play
-                </a>
+                <a class="nav-link text-dark" href="#" id="playMusic"> Play </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="#" id="stopMusic">Stop</a>
               </li>
             </ul>
           </div>
@@ -255,28 +259,52 @@
         window.location.href = "login.html";
       }
       // ham nghe nhac
-      const audio = new Audio("public/Music/musix-chill.mp3");
-      let isPlaying = false;
+      // const audio = new Audio("public/Music/musix-chill.mp3");
+      // let isPlaying = false;
 
-      audio.addEventListener("ended", function () {
-        // khi nhac ket thuc no se chay lai
-        this.currentTime = 0; // dat thoi gian tro ve 0
-        this.play();
-      });
+      // audio.addEventListener("ended", function () {
+      //   // khi nhac ket thuc no se chay lai
+      //   this.currentTime = 0; // dat thoi gian tro ve 0
+      //   this.play();
+      // });
 
-      document
-        .getElementById("startAudioButton")
-        .addEventListener("click", function () {
-          if (isPlaying) {
-            // neu nhac dang chay thi dung no
-            audio.pause();
-            isPlaying = false;
-          } else {
-            // neu nhac chua chay thi chay no
-            audio.play();
-            isPlaying = true;
+      // document
+      //   .getElementById("startAudioButton")
+      //   .addEventListener("click", function () {
+      //     if (isPlaying) {
+      //       // neu nhac dang chay thi dung no
+      //       audio.pause();
+      //       isPlaying = false;
+      //     } else {
+      //       // neu nhac chua chay thi chay no
+      //       audio.play();
+      //       isPlaying = true;
+      //     }
+      //   });
+      let audio;
+
+      // function play music
+      function playMusic() {
+        const musicUrl = prompt("URL music to play :");
+        if (musicUrl) {
+          if (audio) {
+            audio.pause(); // Stop the current music if playing
           }
-        });
+          audio = new Audio(musicUrl);
+          audio.play();
+        }
+      }
+
+      // function stop music
+      function stopMusic() {
+        if (audio) {
+          audio.pause();
+        }
+      }
+
+      // lắng nghe sự kiện click
+      document.getElementById("playMusic").addEventListener("click", playMusic);
+      document.getElementById("stopMusic").addEventListener("click", stopMusic);
     </script>
   </body>
 </html>
