--- a/index.html
+++ b/index.html
@@ -106,135 +106,6 @@
         <ul id="content" class="todo-list"></ul>
       </div>
     </div>
-    <div
-      class="modal fade"
-      id="editModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Edit Task</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <input type="hidden" id="editTaskId" />
-            <div class="form-group">
-              <label for="editTitle" style="margin-bottom: 10px">Title:</label>
-              <input
-                type="text"
-                class="form-control"
-                id="editTitle"
-                style="margin-bottom: 20px"
-              />
-            </div>
-            <div class="form-group">
-              <label for="editDeadline" style="margin-bottom: 10px"
-                >Deadline:</label
-              >
-              <input
-                type="date"
-                class="form-control"
-                id="editDeadline"
-                style="margin-bottom: 20px"
-              />
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <button type="button" class="btn btn-primary" id="saveEditBtn">
-              Save Changes
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="notificationModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Thông báo đã đến hạn
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body" id="notificationContent">
-            <!-- noi dung thong bao se cap nhap o day -->
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Đóng
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="notificationModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body" id="notificationContent">
-            <!-- noi dung thong bao se cap nhap o day -->
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Đóng
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -258,31 +129,8 @@
         // neu ko co thong tin login se chuyen den trang login.html
         window.location.href = "login.html";
       }
-      // ham nghe nhac
-      // const audio = new Audio("public/Music/musix-chill.mp3");
-      // let isPlaying = false;
-
-      // audio.addEventListener("ended", function () {
-      //   // khi nhac ket thuc no se chay lai
-      //   this.currentTime = 0; // dat thoi gian tro ve 0
-      //   this.play();
-      // });
-
-      // document
-      //   .getElementById("startAudioButton")
-      //   .addEventListener("click", function () {
-      //     if (isPlaying) {
-      //       // neu nhac dang chay thi dung no
-      //       audio.pause();
-      //       isPlaying = false;
-      //     } else {
-      //       // neu nhac chua chay thi chay no
-      //       audio.play();
-      //       isPlaying = true;
-      //     }
-      //   });
+      // chưc nang nghe nhac
       let audio;
-
       // function play music
       function playMusic() {
         const musicUrl = prompt("URL music to play :");
