--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           id="title"
           type="text"
           placeholder="Add title"
-          style="margin: 5px"
+          style="margin-right: 20px"
         />
         <input id="deadline" type="date" placeholder="Add deadline" />
         <button id="addBtn" type="submit" class="add">Add</button>
