--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
       let audio;
       // function play music
       function playMusic() {
-        const musicUrl = prompt("URL music to play :");
+        // const musicUrl = prompt("URL music to play :");
+        const musicUrl = "public/Music/musix-chill.mp3";
         if (musicUrl) {
           if (audio) {
             audio.pause(); // Stop the current music if playing
